<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ReminderListFragment">

    <TextView
        android:id="@+id/reminders_title"
        style="@style/Title"
        android:text="@string/reminder_list_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/button_color"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:contentPaddingBottom="8dp"
        app:contentPaddingLeft="8dp"
        app:contentPaddingRight="8dp"
        app:contentPaddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/reminders_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_reminder_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add"
        app:maxImageSize="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_reminder_button_description"
        android:backgroundTint="@color/button_color"
        app:tint="@color/white"
        app:rippleColor="#e1ccab"/>

    <Button
        android:id="@+id/delete_all_reminders_button"
        android:text="@string/delete_all_reminders_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        style="@style/Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>